--- a/config/yugabyte/regression_pipelines/throughput_read_workload/yugabyte/THRPT_G6_join_index.yaml
+++ b/config/yugabyte/regression_pipelines/throughput_read_workload/yugabyte/THRPT_G6_join_index.yaml
@@ -1,14 +1,14 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
-username: {{username}}
-password: {{password}}
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=true
+username: { { username } }
+password: { { password } }
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
 collect_pg_stat_statements: true
-use_dist_in_explain : true
+use_dist_in_explain: true
 yaml_version: v1.0
 works:
     work:
@@ -35,59 +35,70 @@ microbenchmark:
             - DROP TABLE IF EXISTS REGION_1;
 
         loadRules:
-              - table: REGION_
-                count: 1
-                rows: 100
-                columns:
-                    - name: region_id
-                      util: RandomUniqueIntGen
-                      params: [ 1, 100 ]
-                    - name: region_name
-                      util: PrimaryStringGen
-                      params: [ 1, 10 ]
-                    - name: region_manager
-                      util: OneStringFromArray
-                      params: [ "id-1000001","id-1000002","id-1000003","id-1000004","id-1000005","id-1000006","id-1000007","id-1000008","id-1000009","id-1000010"]
-                    - name: is_active
-                      util: RandomBoolean
+            - table: REGION_
+              count: 1
+              rows: 100
+              columns:
+                  - name: region_id
+                    util: RandomUniqueIntGen
+                    params: [1, 100]
+                  - name: region_name
+                    util: PrimaryStringGen
+                    params: [1, 10]
+                  - name: region_manager
+                    util: OneStringFromArray
+                    params:
+                        [
+                            "id-1000001",
+                            "id-1000002",
+                            "id-1000003",
+                            "id-1000004",
+                            "id-1000005",
+                            "id-1000006",
+                            "id-1000007",
+                            "id-1000008",
+                            "id-1000009",
+                            "id-1000010",
+                        ]
+                  - name: is_active
+                    util: RandomBoolean
 
-              - table: THRPT_G1_range_table_
-                count: 1
-                rows: 1000000
-                columns:
-                    - name: id
-                      util: RandomUniqueIntGen
-                      params: [ 1, 1000000 ]
-                    - name: region_id
-                      util: RandomNumber
-                      params: [ 1, 100 ]
-                    - name: category_id
-                      util: RandomNumber
-                      params: [ 1, 50 ]
-                    - name: subcategory_id
-                      util: RandomNumber
-                      params: [ 1, 500 ]
-                    - name: date_created
-                      util: RandomDateBtwYears
-                      params: [2000, 2025]
-                    - name: status_code
-                      util: RandomNumber
-                      params: [ 1, 5 ]
-                    - name: priority_level
-                      util: RandomNumber
-                      params: [ 1, 10 ]
-                    - name: amount
-                      util: RandomNumber
-                      params: [ 1, 100000 ]
-                    - name: quantity
-                      util: RandomNumber
-                      params: [ 1, 100000 ]
+            - table: THRPT_G1_range_table_
+              count: 1
+              rows: 1000000
+              columns:
+                  - name: id
+                    util: RandomUniqueIntGen
+                    params: [1, 1000000]
+                  - name: region_id
+                    util: RandomNumber
+                    params: [1, 100]
+                  - name: category_id
+                    util: RandomNumber
+                    params: [1, 50]
+                  - name: subcategory_id
+                    util: RandomNumber
+                    params: [1, 500]
+                  - name: date_created
+                    util: RandomDateBtwYears
+                    params: [2000, 2025]
+                  - name: status_code
+                    util: RandomNumber
+                    params: [1, 5]
+                  - name: priority_level
+                    util: RandomNumber
+                    params: [1, 10]
+                  - name: amount
+                    util: RandomNumber
+                    params: [1, 100000]
+                  - name: quantity
+                    util: RandomNumber
+                    params: [1, 100000]
 
         executeRules:
-
-            -   workload: THRPT_G6_join_index
-                run:
-                    -   name: thrpt_wrkld_6
-                        weight: 100
-                        queries:
-                            -   query: SELECT f.id, f.amount, f.quantity, r.region_name, r.region_manager FROM THRPT_G1_range_table_1 f JOIN REGION_1 r ON f.region_id = r.region_id WHERE f.category_id < 2 AND f.date_created BETWEEN '2024-01-01' AND '2025-01-01' AND r.is_active = TRUE;
+            - workload: THRPT_G6_join_index
+              run:
+                  - name: thrpt_wrkld_6
+                    weight: 100
+                    queries:
+                        - query: SELECT f.id, f.amount, f.quantity, r.region_name, r.region_manager FROM THRPT_G1_range_table_1 f JOIN REGION_1 r ON f.region_id = r.region_id WHERE f.category_id < 2 AND f.date_created BETWEEN '2024-01-01' AND '2025-01-01' AND r.is_active = TRUE;
