--- a/config/yugabyte/regression_pipelines/throughput_write_workloads/yugabyte/THRPT_G11_Insert_100rows.yaml
+++ b/config/yugabyte/regression_pipelines/throughput_write_workloads/yugabyte/THRPT_G11_Insert_100rows.yaml
@@ -1,14 +1,14 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
-username: {{username}}
-password: {{password}}
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=true
+username: { { username } }
+password: { { password } }
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
 collect_pg_stat_statements: true
-use_dist_in_explain : true
+use_dist_in_explain: true
 yaml_version: v1.0
 works:
     work:
@@ -31,63 +31,62 @@ microbenchmark:
             - DROP TABLE IF EXISTS THRPT_G1_range_table_1;
 
         loadRules:
-              - table: THRPT_G1_range_table_
-                count: 1
-                rows: 1000000
-                columns:
-                    - name: id
-                      util: RandomUniqueIntGen
-                      params: [ 1, 1000000 ]
-                    - name: region_id
-                      util: RandomNumber
-                      params: [ 1, 100 ]
-                    - name: category_id
-                      util: RandomNumber
-                      params: [ 1, 50 ]
-                    - name: subcategory_id
-                      util: RandomNumber
-                      params: [ 1, 500 ]
-                    - name: date_created
-                      util: RandomDateBtwYears
-                      params: [2000, 2025]
-                    - name: status_code
-                      util: RandomNumber
-                      params: [ 1, 5 ]
-                    - name: priority_level
-                      util: RandomNumber
-                      params: [ 1, 10 ]
-                    - name: amount
-                      util: RandomNumber
-                      params: [ 1, 100000 ]
-                    - name: quantity
-                      util: RandomNumber
-                      params: [ 1, 100000 ]
+            - table: THRPT_G1_range_table_
+              count: 1
+              rows: 1000000
+              columns:
+                  - name: id
+                    util: RandomUniqueIntGen
+                    params: [1, 1000000]
+                  - name: region_id
+                    util: RandomNumber
+                    params: [1, 100]
+                  - name: category_id
+                    util: RandomNumber
+                    params: [1, 50]
+                  - name: subcategory_id
+                    util: RandomNumber
+                    params: [1, 500]
+                  - name: date_created
+                    util: RandomDateBtwYears
+                    params: [2000, 2025]
+                  - name: status_code
+                    util: RandomNumber
+                    params: [1, 5]
+                  - name: priority_level
+                    util: RandomNumber
+                    params: [1, 10]
+                  - name: amount
+                    util: RandomNumber
+                    params: [1, 100000]
+                  - name: quantity
+                    util: RandomNumber
+                    params: [1, 100000]
 
         executeRules:
-
-            -   workload: THRPT_G11_Insert_100rows
-                run:
-                    -   name: thrpt_wrkld_11
-                        weight: 100
-                        queries:
-                            -   query: INSERT INTO THRPT_G1_range_table_1 (id, region_id, category_id, subcategory_id, date_created, status_code, priority_level, amount, quantity) VALUES [(?,?,?,?,?,?,?,?,?)][pattern_count]
-                                pattern_count: 100
-                                bindings:
-                                    - util: PrimaryIntGen
-                                      params: [ 1000001, 10000000 ]
-                                    - util: RandomNumber
-                                      params: [ 1, 100 ]
-                                    - util: RandomNumber
-                                      params: [ 1, 50 ]
-                                    - util: RandomNumber
-                                      params: [ 1, 500 ]
-                                    - util: RandomDateBtwYears
-                                      params: [ 2000, 2025 ]
-                                    - util: RandomNumber
-                                      params: [ 1, 5 ]
-                                    - util: RandomNumber
-                                      params: [ 1, 10 ]
-                                    - util: RandomNumber
-                                      params: [ 1, 100000 ]
-                                    - util: RandomNumber
-                                      params: [ 1, 100000 ]
+            - workload: THRPT_G11_Insert_100rows
+              run:
+                  - name: thrpt_wrkld_11
+                    weight: 100
+                    queries:
+                        - query: INSERT INTO THRPT_G1_range_table_1 (id, region_id, category_id, subcategory_id, date_created, status_code, priority_level, amount, quantity) VALUES [(?,?,?,?,?,?,?,?,?)][pattern_count]
+                          pattern_count: 100
+                          bindings:
+                              - util: PrimaryIntGen
+                                params: [1000001, 10000000]
+                              - util: RandomNumber
+                                params: [1, 100]
+                              - util: RandomNumber
+                                params: [1, 50]
+                              - util: RandomNumber
+                                params: [1, 500]
+                              - util: RandomDateBtwYears
+                                params: [2000, 2025]
+                              - util: RandomNumber
+                                params: [1, 5]
+                              - util: RandomNumber
+                                params: [1, 10]
+                              - util: RandomNumber
+                                params: [1, 100000]
+                              - util: RandomNumber
+                                params: [1, 100000]
